# discord-proxy-rs

./: Cargo.toml  README.md  README_RU.md  build.rs  drover.toml  rustfmt.toml
src/: config.rs  hooks.rs  lib.rs  state.rs  tcp_proxy.rs  udp_bypass.rs
