[package]
name = "discord-proxy-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "version"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
dashmap = "6.1.0"
once_cell = "1.21.4"
regex = "1.12.3"
retour = { version = "0.3.1", features = ["static-detour"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_Networking_WinSock", "Win32_System_Console", "Win32_System_Threading", "Win32_Security", "Win32_System_Environment"] }

[features]
default = []
